2010-02-02  Yury Semikhatsky  <yurys@chromium.org>

        Reviewed by Pavel Feldman.

        Upstream DevTools code.

        https://bugs.webkit.org/show_bug.cgi?id=34326

        * WebKit.gyp:
        * src/APUAgentDelegate.h: Added.
        * src/BoundObject.cpp: Added.
        (WebKit::BoundObject::BoundObject):
        (WebKit::BoundObject::~BoundObject):
        (WebKit::BoundObject::addProtoFunction):
        (WebKit::BoundObject::build):
        * src/BoundObject.h: Added.
        * src/DebuggerAgent.h: Added.
        * src/DebuggerAgentImpl.cpp: Added.
        (WebKit::DebuggerAgentImpl::DebuggerAgentImpl):
        (WebKit::DebuggerAgentImpl::~DebuggerAgentImpl):
        (WebKit::DebuggerAgentImpl::getContextId):
        (WebKit::DebuggerAgentImpl::debuggerOutput):
        (WebKit::DebuggerAgentImpl::createUtilityContext):
        (WebKit::DebuggerAgentImpl::executeUtilityFunction):
        (WebKit::DebuggerAgentImpl::executeVoidJavaScript):
        (WebKit::DebuggerAgentImpl::page):
        * src/DebuggerAgentImpl.h: Added.
        (WebKit::DebuggerAgentImpl::setAutoContinueOnException):
        (WebKit::DebuggerAgentImpl::autoContinueOnException):
        (WebKit::DebuggerAgentImpl::webdevtoolsAgent):
        (WebKit::DebuggerAgentImpl::webView):
        * src/DebuggerAgentManager.cpp: Added.
        (WebKit::DebuggerAgentManager::debugHostDispatchHandler):
        (WebKit::DebuggerAgentManager::debugAttach):
        (WebKit::DebuggerAgentManager::debugDetach):
        (WebKit::DebuggerAgentManager::onV8DebugMessage):
        (WebKit::DebuggerAgentManager::pauseScript):
        (WebKit::DebuggerAgentManager::executeDebuggerCommand):
        (WebKit::DebuggerAgentManager::setMessageLoopDispatchHandler):
        (WebKit::DebuggerAgentManager::setHostId):
        (WebKit::DebuggerAgentManager::onWebViewClosed):
        (WebKit::DebuggerAgentManager::onNavigate):
        (WebKit::DebuggerAgentManager::sendCommandToV8):