@@ -1,3 +1,15 @@
+2010-02-02  Shinichiro Hamaji  <hamaji@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        [Chromium] Implement WebFrameImpl::pageNumberForElementById
+        https://bugs.webkit.org/show_bug.cgi?id=34471
+
+        * public/WebFrame.h:
+        * src/WebFrameImpl.cpp:
+        (WebKit::WebFrameImpl::pageNumberForElementById):
+        * src/WebFrameImpl.h:
+
 2010-02-02  Yury Semikhatsky  <yurys@chromium.org>
 
         Reviewed by Pavel Feldman.
